<resources>
    <string name="app_name">UserSearcher</string>
    <string name="user_search_hint">Search Github users</string>
    <string name="user_email">"Email: "</string>
    <string name="user_fullname">"Name: "</string>
    <string name="action_settings">Settings</string>
    <string name="status_no_result">No search results</string>
    <string name="status_error_network">Mobile network not available</string>
    <string name="status_error_general">Searching encountered an error. Please try again later.</string>
    <string name="sample_prompt">Try query examples</string>

    <string name="sample_query_1">tom</string>
    <string name="sample_query_2">"tom in:email"</string>
    <string name="sample_query_3">"tom repos:>20 followers:>200"</string>

    <string-array name="sample_queries">
        <item>@string/sample_query_1</item>
        <item>@string/sample_query_2</item>
        <item>@string/sample_query_3</item>
    </string-array>

    <string name="menu_item_followers_desc">Followers \u2193</string>
    <string name="menu_item_followers_asc">Followers \u2191</string>
    <string name="menu_item_repositories_desc">Repositories \u2193</string>
    <string name="menu_item_repositories_asc">Repositories \u2191</string>
    <string name="menu_item_joined_desc">Joined \u2193</string>
    <string name="menu_item_joined_asc">Joined \u2191</string>

    <string name="clear_cache">Clear Search History</string>
    <string name="title_activity_splash">SplashActivity</string>
</resources>
